--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -35,3 +35,13 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.custom-width-input {
+  width: 33rem;
+}
