--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -45,3 +45,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .custom-width-input {
   width: 33rem;
 }
+
+.custom-margin-display {
+  width: 100%;
+}
